--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ sites/default/settings.php
 # Ignore paths that contain user-generated content.
 # sites/*/files
 sites/*/private
+/nbproject/private/
