--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ sites/default/settings.php
 # Ignore paths that contain user-generated content.
 # sites/*/files
 sites/*/private
-/nbproject/private/
+
+# Netbeans Files
+nbproject/*
